# Bspice

./: .gitignore  CMakeLists.txt  README.md  example.circuit  makefile
Examples/: Low-Pass-100Hz.circuit  capacitor.circuit  capacitor2.circuit  capacitorAC.circuit  diode.circuit  inductor.circuit  inductorCapacitor.circuit  inductorCapacitor2.circuit  inductorCapacitorAC.circuit  inductorCapacitorSquareWave.circuit  invertingOpamp.circuit  lowPassOpamp.circuit  nonInvertingOpamp.circuit  opamp.circuit  summingOpamp.circuit  twoCapacitors.circuit  undefinedComponent.circuit
src/: Bmaths.cpp  Bmaths.h  Circuit.cpp  Circuit.h  Circuit_impl.h  circuit.h  component.cpp  component.h  fileParser.cpp  fileParser.h  main.cpp  tokenParser.cpp  tokenParser.h  tokenParser_impl.h
src/BMaths/: BMaths.h  DAESolve.cpp  DAESolve.h  algebraicEquationSolver.cpp  algebraicEquationSolver.h  calculus.h  complexNumbers.h  differentialEquationSolver.cpp  differentialEquationSolver.h  fourierTransform.h  function.cpp  function.h  matrix.h
src/Bmaths/: AlgebraicEquationSolver.cpp  AlgebraicEquationSolver.h  Bmaths.cpp  Bmaths.h  DAESolve.cpp  DAESolve.h  DAESolve_impl.h  DifferentialEquationSolver.cpp  DifferentialEquationSolver.h  FourierTransform.h  calculus.h  complexNumbers.h  function.cpp  function.h  matrix.h  matrix_impl.h
